--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </div>
     </div>
 
-    <!-- JAVASCRIPT LIBRARIES -->
-    <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-    <script src="https://unpkg.com/ipfs-http-client/dist/index.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/secret-sharing.js/dist/secret-sharing.min.js"></script>
+<!-- JAVASCRIPT LIBRARIES (LOCAL) -->
+    <script src="libs/ethers.js"></script>
+    <script src="libs/ipfs-http-client.js"></script>
+    <script src="libs/crypto-js.js"></script>
+    <script src="libs/secrets.js"></script>
     
     <!-- YOUR APPLICATION LOGIC -->
     <script src="app.js"></script>
