Add and Remove Collaborator Added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
             </div>
         </div>
 
+        <!-- Access Management Section -->
+        <div class="card">
+            <h2>3. Manage Collaborators</h2>
+            <p>Grant or revoke access for other Ethereum addresses. You must be the owner of the repository.</p>
+            <input type="text" id="manage-hash-input" placeholder="Enter IPFS Hash of your repository">
+            <input type="text" id="collaborator-address-input" placeholder="Enter Collaborator's Ethereum Address">
+            <div class="button-group">
+                <button id="add-collaborator-btn">Add Collaborator</button>
+                <button id="remove-collaborator-btn" class="danger">Remove Collaborator</button>
+            </div>
+        </div>
+
         <!-- Benchmarking Log Section -->
         <div class="card">
             <h2>Experiment Log</h2>
