retrieval works as well!

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <!-- JAVASCRIPT LIBRARIES (LOCAL) -->
     <script src="libs/ethers.js"></script>
-    <script src="libs/ipfs-http-client.js"></script>
+    <!-- <script src="libs/ipfs-http-client.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script src="libs/secrets.js"></script>
     
